Ajout de la page "Porte-Folio"

--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
     <!--Le header DEBUT-->
     <header>
         <nav class="navbar navbar-expand-lg">
-            <img src="assets/image/profil.jpeg" id="profil" />
-
+            <img src="assets/image/profil.jpeg" id="profil" class="profil" />
             <a class="cv" href="CV.html">CV</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-vector-square"></i>
                         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#apps">Applications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
+
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -55,7 +58,7 @@
         </div>
         <div class="inline">
             <ul class="logiciels">
-                <span>Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
+                <span> <i class="fas fa-laptop"></i> Liste des logiciels et APIs que j'emplois pour créer ce site:</span>
 
                 <li>
                     <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
@@ -76,7 +79,7 @@
 
 
             <ul class="technologies">
-                <span>Liste des langages que j'emplois pour créer ce site:</span>
+                <span> <i class="fas fa-laptop-code"></i> Liste des langages que j'emplois pour créer ce site:</span>
 
                 <li>
                     Git
@@ -95,7 +98,7 @@
                 </li>
             </ul>
             <ul class="capacites">
-                <span>Liste des capacités que je peux vous proposer</span>
+                <span> <i class="fas fa-briefcase"></i> Liste des capacités que je peux vous proposer</span>
 
                 <li>
                     Montage-vidéo
@@ -138,7 +141,7 @@
                 </li>
             </ul>
             <ul class="programmes">
-                <span>Liste des logiciels que j'emplois souvent</span>
+                <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois souvent</span>
 
                 <li>
                     Adobe Premiere
