Ajout de photographe et videomaker

--- a/CV.html
+++ b/CV.html
@@ -20,7 +20,7 @@
         </div>
         <div>
             <h1>MASSART DZÉNETAN</h1>
-            <p class="type">Infographiste</p>
+            <p class="type">VideoMaker + Photographe + Codeur JS</p>
         </div>
     </header>
     <main>
