--- a/porte-folio.html
+++ b/porte-folio.html
@@ -57,16 +57,20 @@
     <main>
         <section>
             <h2>Les tutoriels</h2>
-            <div>Bientôt présent</div>
+            <div>
+                <span>Bientôt présent</span>
+            </div>
         </section>
         <section>
             <h2>Les photographies</h2>
-            <div>Bientôt présent</div>
+            <div><a href="https://www.behance.net/gallery/103649419/Fonds-naturels">Les fonds naturels</a></div>
 
         </section>
         <section>
             <h2>Les modèles 3D</h2>
-            <div>Bientôt présent</div>
+            <div>
+                <span>Bientôt présent</span>
+            </div>
 
         </section>
     </main>
