--- a/CV.html
+++ b/CV.html
@@ -77,6 +77,11 @@
                 <li>Adobe AfterEffect</li>
                 <li>Magix Video Deluxe</li>
             </ul>
+            <h3>Photographie</h3>
+            <ul>
+                <li>Nikon D3300</li>
+                <li>Samsung Galaxy A71 128GB</li>
+            </ul>
             <h2>Formations</h2>
             <ul>
                 <li> 2019- Formation en développement Web- BeCode- Charleroi
