--- a/porte-folio.html
+++ b/porte-folio.html
@@ -69,7 +69,12 @@
         <section>
             <h2>Les modèles 3D</h2>
             <div>
-                <span>Bientôt présent</span>
+                <div class="sketchfab-embed-wrapper">
+                    <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/9afaca4084e040228525e115dd1b534b/embed?autospin=0.2&amp;autostart=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
+                        frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+
+
             </div>
 
         </section>
