Ajout du Sketchfab

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                             <a class="dropdown-item" href="https://github.com/DzenetanMassart?tab=repositories">Github</a>
                             <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart/">Linkedin</a>
                             <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
+                            <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+
                         </div>
                     </li>
                 </ul>
