Ajout de 2 modèles 3D

--- a/porte-folio.html
+++ b/porte-folio.html
@@ -71,9 +71,18 @@
             <h2>Les modèles 3D</h2>
             <div>
                 <div class="sketchfab-embed-wrapper">
-                    <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/9afaca4084e040228525e115dd1b534b/embed?autospin=0.2&amp;autostart=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1"
-                        frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                    <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/9afaca4084e040228525e115dd1b534b/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
+                        allow=" fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                 </div>
+                <div class="sketchfab-embed-wrapper">
+                    <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/4a822e95527449d6982839f6b036e5b3/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
+                        allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+                <div class="sketchfab-embed-wrapper">
+                    <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/2f2f4b0bfd30401d93ff3b4bbd1c3784/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
+                        allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
+
 
 
             </div>
