--- a/CV.html
+++ b/CV.html
@@ -35,6 +35,8 @@
             <p><a href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a></p>
             <p><a href="www.linkedin.com/in/dzenetan-massart">www.linkedin.com/in/dzenetan-massart</a></p>
             <p><a href="https://sketchfab.com/DzenetanMassart/models">https://sketchfab.com/DzenetanMassart/models</a></p>
+            <p><a href="https://www.behance.net/dznetanmassart">https://www.behance.net/dznetanmassart</a></p>
+
 
             <h2>LANGUES MAÎTRISÉES</h2>
             <p>Français (Langue maternelle)</p>
