--- a/CV.html
+++ b/CV.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Dzénetan Massart-Le CV</title>
     <meta name="description" content="Le CV de Dzénetan Massart" />
-    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications" />
+    <meta name="keywords" content="CV,Dzénetan,Massart,vidéo,gif,applications,Github" />
     <meta name="author" content="Dzénetan Massart" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -33,7 +33,7 @@
 
             <h2>RÉSEAUX</h2>
             <p><a href="https://github.com/DzenetanMassart">https://github.com/DzenetanMassart</a></p>
-            <p><a href="www.linkedin.com/in/dzenetan-massart">www.linkedin.com/in/dzenetan-massart</a></p>
+            <p><a href="https://www.linkedin.com/in/dzenetan-massart">https://www.linkedin.com/in/dzenetan-massart</a></p>
             <p><a href="https://sketchfab.com/DzenetanMassart/models">https://sketchfab.com/DzenetanMassart/models</a></p>
             <p><a href="https://www.behance.net/dznetanmassart">https://www.behance.net/dznetanmassart</a></p>
 
