--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                             <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart/">Linkedin</a>
                             <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
                             <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.behance.net/dznetanmassart">Behance</a>
 
                         </div>
                     </li>
@@ -164,10 +165,7 @@
                     Autodesk 3DSmax <sup>(version étudiante)</sup>
                 </li>
                 <li>
-                    Autodesk Maya <sup>(version étudiante)</sup>
-                </li>
-                <li>
-                    Adobe After Effect
+                    Adobe After Effect <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
                     Adobe Illustrator
@@ -187,7 +185,7 @@
     <!--Le footer ayant les applications DEBUT-->
     <footer class="apps">
         <h2 id="apps">Les Applications</h2>
-        <p class="description">Ici se trouve les applications que Dzénetan Massart a créées sur son Github !</p>
+        <p class="description">Ici se trouve les applications que j'ai créées sur mon Github !</p>
         <div class="appsview" id="generate"></div>
     </footer>
     <!--Le footer ayant les applications FIN-->
