--- a/porte-folio.html
+++ b/porte-folio.html
@@ -56,18 +56,22 @@
     <h1>Le porte-folio de Dzénetan Massart !</h1>
 
     <main>
-        <section>
+        <section id="tutos">
             <h2>Les tutoriels</h2>
             <div>
                 <span>Bientôt présent</span>
             </div>
         </section>
-        <section>
+        <section id="photos">
             <h2>Les photographies</h2>
-            <div><a href="https://www.behance.net/gallery/103649419/Fonds-naturels">Les fonds naturels</a></div>
-
+            <div>
+                <a href="https://www.behance.net/gallery/103649419/Fonds-naturels">Les fonds naturels</a>
+                <a href="https://www.behance.net/gallery/104117057/Reprage-a-Chevetogne">Repérage à Chevetogne</a>
+                <a href="https://www.behance.net/gallery/104042411/Fonds-verdoyants">Fonds verdoyants</a>
+                <a href="https://www.behance.net/gallery/103840487/Chateau-de-La-Roche-en-Ardenne">Château de La Roche-en-Ardenne</a>
+            </div>
         </section>
-        <section>
+        <section id="3d">
             <h2>Les modèles 3D</h2>
             <div>
                 <div class="sketchfab-embed-wrapper">
