Porte-folio amélioré

--- a/porte-folio.html
+++ b/porte-folio.html
@@ -44,7 +44,7 @@
                         </div>
                     </li>
                 </ul>
-                <a class="nav-link" href="index.html">Acceuil</a>
+                <a class="nav-link" id="acceuil" href="index.html">Acceuil</a>
 
             </div>
         </nav>
@@ -97,25 +97,25 @@
                         <div class="tab-pane fade show active" id="list-logo" role="tabpanel" aria-labelledby="list-logo-list">
                             <div class="sketchfab-embed-wrapper">
                                 <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/9afaca4084e040228525e115dd1b534b/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
-                                    allow=" fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                                    allow=" fullscreen; " mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="list-presentoirs" role="tabpanel" aria-labelledby="list-presentoirs-list">
                             <div class="sketchfab-embed-wrapper">
                                 <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/4a822e95527449d6982839f6b036e5b3/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
-                                    allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                                    allow="autoplay; fullscreen; " mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="list-valise" role="tabpanel" aria-labelledby="list-valise-list">
                             <div class="sketchfab-embed-wrapper">
                                 <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/2f2f4b0bfd30401d93ff3b4bbd1c3784/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
-                                    allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                                    allow="autoplay; fullscreen; " mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="list-scene" role="tabpanel" aria-labelledby="list-scene-list">
                             <div class="sketchfab-embed-wrapper">
                                 <iframe title="A 3D model" width="100%" height="500" src="https://sketchfab.com/models/c64687cdba064cb5a6816fc519381840/embed?camera=0&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0"
-                                    allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                                    allow="autoplay; fullscreen; " mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                             </div>
                         </div>
                     </div>
