Acceuil porte-folio aligné à gauche

--- a/porte-folio.html
+++ b/porte-folio.html
@@ -43,8 +43,11 @@
                             <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Acceuil</a>
+                    </li>
+
                 </ul>
-                <a class="nav-link" id="acceuil" href="index.html">Acceuil</a>
 
             </div>
         </nav>
