--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <!--Le header DEBUT-->
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <img src="assets/image/profil.jpeg" id="profil" class="profil" />
             <a class="cv" href="CV.html">CV</a>
 
@@ -49,7 +49,7 @@
                         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#apps">Applications</a>
                     </li>
                     <li class="nav-item">
