--- a/porte-folio.html
+++ b/porte-folio.html
@@ -17,20 +17,21 @@
 <body>
     <!--Le header DEBUT-->
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <img src="assets/image/profil.jpeg" id="profil" class="profil" />
 
             <a class="cv" href="CV.html">CV</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-vector-square"></i>
                         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#apps">Applications</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Acceuil</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -43,9 +44,7 @@
                             <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
                         </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Acceuil</a>
-                    </li>
+
 
                 </ul>
 
