--- a/index.html
+++ b/index.html
@@ -34,13 +34,26 @@
     <meta name="msapplication-TileImage" content="root/ms-icon-144x144.png">
     <meta name="theme-color" content="#455DB3">
 
+    <!-- Pour les intégrations sur les réseaux sociaux -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dzenetanmassart.github.io/">
+    <meta property="og:title" content="Dzénetan Massart">
+    <meta property="og:description" content="Le site web de Dzénetan Massart">
+    <meta property="og:image" content="root/android-icon-192x192.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dzenetanmassart.github.io/">
+    <meta property="twitter:title" content="Dzénetan Massart">
+    <meta property="twitter:description" content="Le site web de Dzénetan Massart">
+    <meta property="twitter:image" content="root/android-icon-192x192.png">
+
 
 </head>
 
 <body>
     <!--Le header DEBUT-->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+    <header class="dark background">
+        <nav class="navbar navbar-expand-lg ">
             <img src="assets/image/profil.jpeg" id="profil" class="profil" />
             <a class="cv" href="CV.html">CV</a>
 
@@ -72,11 +85,13 @@
                 </ul>
             </div>
         </nav>
+
     </header>
     <!--Le header FIN-->
     <!--Le main Debut-->
 
     <main>
+
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <div class="intro">
             <p>Ce site a été créé pendant la formation "BeCode" et sert à tester les différentes capacités apprises lors de la formation par Dzénetan Massart.</p>
