--- a/porte-folio.html
+++ b/porte-folio.html
@@ -56,12 +56,16 @@
     <h1>Le porte-folio de Dzénetan Massart !</h1>
 
     <main>
+        <!-- Les Tutoriels-->
+
         <section id="tutos">
             <h2>Les tutoriels</h2>
             <div>
                 <span>Bientôt présent</span>
             </div>
         </section>
+        <!-- Les photographies-->
+
         <section id="photos">
             <h2>Les photographies</h2>
             <div>
@@ -82,6 +86,8 @@
 
             </div>
         </section>
+        <!-- Les modèles 3D-->
+
         <section id="3d">
             <h2>Les modèles 3D</h2>
             <div class="row">
@@ -132,6 +138,7 @@
             </div>
 
         </section>
+
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
