Ajout de ScoopIt
ScoopIt est un site web pour rassembler des articles autour de topic.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                             <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
                             <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
                             <a class="dropdown-item" href="https://www.behance.net/dznetanmassart">Behance</a>
+                            <a class="dropdown-item" href="https://www.scoop.it/topic/les-applications-en-ligne">ScoopIt</a>
 
                         </div>
                     </li>
