--- a/porte-folio.html
+++ b/porte-folio.html
@@ -42,6 +42,9 @@
                             <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart/">Linkedin</a>
                             <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
                             <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.behance.net/dznetanmassart">Behance</a>
+                            <a class="dropdown-item" href="https://www.scoop.it/topic/les-applications-en-ligne">ScoopIt</a>
+
                         </div>
                     </li>
 
