--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <a class="nav-link" href="#apps">Applications</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#parcours">Parcours</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
 
                     </li>
@@ -76,10 +79,13 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="https://github.com/DzenetanMassart?tab=repositories">Github</a>
                             <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart/">Linkedin</a>
-                            <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
-                            <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.youtube.com/channel/UCpZE_eV7wKf7sJXvpPGP-ZA/videos">YouTube</a>
                             <a class="dropdown-item" href="https://www.behance.net/dznetanmassart">Behance</a>
+                            <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
                             <a class="dropdown-item" href="https://www.scoop.it/topic/les-applications-en-ligne">ScoopIt</a>
+                            <a class="dropdown-item" href="https://www.pinterest.fr/MakeOnWebsoft/_saved/">Pinterest</a>
+
 
                         </div>
                     </li>
@@ -181,18 +187,21 @@
                 <li>
                     Création de tutoriel
                 </li>
+                <li>
+                    Community Managing
+                </li>
             </ul>
             <ul class="programmes">
                 <span> <i class="fas fa-pencil-ruler"></i> Liste des logiciels que j'emplois souvent</span>
 
                 <li>
-                    Adobe Premiere
+                    Adobe Premiere Pro CS6 <sup>(amélioré avec des scripts)</sup>
                 </li>
                 <li>
-                    Adobe Photoshop
+                    Adobe Photoshop CS6
                 </li>
                 <li>
-                    Audacity
+                    Audacity <sup> (amélioré avec des plugins)</sup>
                 </li>
                 <li>
                     PaintDotNet <sup> (amélioré avec des plugins)</sup>
@@ -204,7 +213,7 @@
                     Autodesk 3DSmax <sup>(version étudiante)</sup>
                 </li>
                 <li>
-                    Adobe After Effect <sup>(amélioré avec des plugins)</sup>
+                    Adobe After Effect CS6 <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
                     Adobe Illustrator
@@ -216,18 +225,86 @@
             </ul>
         </div>
 
-
         </div>
     </main>
     <!--Le main FIN-->
 
-    <!--Le footer ayant les applications DEBUT-->
-    <footer class="apps">
+    <!--La div ayant les applications DEBUT-->
+    <section class="apps">
         <h2 id="apps">Les Applications</h2>
         <p class="description">Ici se trouve les applications que j'ai créées sur mon Github !</p>
         <div class="appsview" id="generate"></div>
-    </footer>
-    <!--Le footer ayant les applications FIN-->
+    </section>
+    <!--La div ayant les applications FIN-->
+
+    <!--La div ayant le parcours DEBUT-->
+    <section class="parcours">
+        <h2 id="parcours">Le Parcours</h2>
+        <p class="description">Ici se trouve mon parcours d'apprentissage de mes différentes compétences !</p>
+        <div class="parc">
+            <article> <img src="assets/image/parcours/2007.png" alt="PaintXP"></article>
+            <article>
+                <h3>2007: L'image</h3>
+                <p>C'est en 2007 que je commence à m'amuser avec Paint de WindowsXP et où j'ai commencé à faire des montages-photos et du dessin.</p>
+                <p>Picasa sera également employé pour palier le manque d'effet de traitement visuel.</p>
+
+            </article>
+            <article><img src="assets/image/parcours/2008.png" alt="Windows Movie Maker"></article>
+
+            <article>
+                <h3>2008: La vidéo</h3>
+                <p>C'est en Avril 2008 que je commence à m'amuser avec Windows Movie Maker et où j'ai commencé à faire des YouTube Poop et des podcasts.</p>
+                <p>Audacity sera également employé pour palier le manque d'effet de traitement audio.</p>
+
+            </article>
+            <article><img src="assets/image/parcours/2010.png" alt="Google SketchUp"></article>
+
+            <article>
+                <h3>2010: La 3D</h3>
+                <p>C'est en Novembre 2010 que je commence à m'amuser avec Google SketchUp et où j'ai commencé à faire des mises en scène en 3D.</p>
+            </article>
+            <article><img src="assets/image/parcours/2011.png" alt="Magix Video Deluxe et PaintDotNet"></article>
+
+            <article>
+                <h3>2011: Magix Video Deluxe et PaintDotNet</h3>
+                <p>C'est en Juillet 2011 que je commence à me séparer de Windows Movie Maker et de Paint pour bien plus puissant et donc moins contraignant. </p>
+                <p>TheGimp fera également partie des logiciels que j'emplois mais seulement pour la création et la modification de gif animé.</p>
+
+            </article>
+            <article><img src="assets/image/parcours/2014.png" alt="Photoshop"></article>
+
+            <article>
+                <h3>2014: Photoshop CS6</h3>
+                <p>C'est en 2014 que je me tourne vers la suite Adobe pour Photoshop afin de pouvoir faire certains effets non-disponible sur PaintDotNet. </p>
+                <p>Je me sépare de TheGimp pour des raisons de lenteur et de doublon avec PaintDotNet et Photoshop.</p>
+            </article>
+            <article><img src="assets/image/parcours/2016.png" alt="Adobe Illustraor, After Effect & InDesign. Autodesk 3DSmax, Maya. "></article>
+
+            <article>
+                <h3>2016: Illustrator, After Effect , InDesign , 3DSmax et Maya</h3>
+                <p>C'est en 2016, à la Haute École Albert Jacquard en section "infographie" que j'apprend à me servir du reste de la suite Adobe et que je découvre la suite d'Autodesk. </p>
+                <p>Je me sépare de mon Google SketchUp devenu payant et non-adapté à mes besoins en animation et modélisation 3D.</p>
+                <p>Je fais la rencontre du logiciel Notepad++ en cours de Javascript et je m'en sers pour commencer à créer des petites pages en HTML de temps en temps.</p>
+            </article>
+            <article><img src="assets/image/parcours/2019.png" alt="Adobe Premiere Pro CS6 & Visual Studio Code"></article>
+
+            <article>
+                <h3>2019: Adobe Premiere Pro et Visual Studio Code</h3>
+                <p>C'est en 2019 , suite à la perte de Magix Video Deluxe suite à un problème de ré-installation, que je passe enfin à Adobe Premiere Pro qui me permet de faire des vidéos avec encore plus d'ambition de part son système d'imbriquation et
+                    ses effets multiples et polyvalents. C'est aussi cette année-là où je fais ma formation à BeCode où j'apprend à me servir de Visual Studio Code pour coder mon site web, des applications et même rédiger mon C.V. . </p>
+                <p> Je me sépare de Notepad++ devenu inutile face à la machine à gaz qu'est mon Visual Studio Code.</p>
+            </article>
+            <article><img src="assets/image/parcours/2020.png" alt="OBS Studio"></article>
+
+            <article>
+                <h3>2020: OBS Studio</h3>
+                <p>C'est en 2020 , afin d'optimiser mes captures d'écrans et ainsi faire des tutoriels beaucoup plus fluides, que je me suis procuré le logiciel "OBS studio" . </p>
+                <p> Je fais la rencontre du logiciel FireAlpaca qui est compatible avec ma tablette graphique contrairement à mon Adobe Photoshop CS6.</p>
+            </article>
+        </div>
+    </section>
+    <!--La div ayant le parcours FIN-->
+    <div class="copyright">© Dzénetan Massart - 2021</div>
 
 
     <!--Les scripts-->
