--- a/CV.html
+++ b/CV.html
@@ -11,7 +11,8 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/css/cv.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/cv.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="assets/css/cv_print.css" media="print">
 </head>
 
 <body>
@@ -20,7 +21,12 @@
         </div>
         <div>
             <h1>MASSART DZÉNETAN</h1>
-            <p class="type">VideoMaker + Photographe + Codeur JS</p>
+            <p class="type">
+                <span>VideoMaker</span>
+                <span>Photographe</span>
+                <span>Community Manager</span>
+                <span>Codeur Javascript</span>
+            </p>
         </div>
     </header>
     <main>
@@ -48,6 +54,25 @@
 
 
             <h2>COMPÉTENCES</h2>
+            <h3>Video</h3>
+            <ul>
+                <li>Adobe Premiere</li>
+                <li>Adobe AfterEffect</li>
+                <li>Magix Video Deluxe</li>
+            </ul>
+
+            <h3>Photographie</h3>
+            <ul>
+                <li>Nikon D3300</li>
+                <li>Samsung Galaxy A71 128GB</li>
+            </ul>
+            <h3>Optimisation des réseaux sociaux</h3>
+            <ul>
+                <li>YouTube</li>
+                <li>Twitter</li>
+                <li>Facebook</li>
+                <li>LinkedIn</li>
+            </ul>
             <h3>Coding ( Visual Studio Code )</h3>
             <ul>
                 <li>CSS</li>
@@ -65,28 +90,23 @@
                 <li>PaintDotNet</li>
                 <li>Adobe Illustrator</li>
             </ul>
+
             <h3>3D</h3>
             <ul>
                 <li>Autodesk 3DSmax</li>
                 <li>Autodesk Maya</li>
             </ul>
+
             <h3>Mise en page</h3>
             <ul>
                 <li>Adobe InDesign</li>
             </ul>
-            <h3>Video</h3>
-            <ul>
-                <li>Adobe Premiere</li>
-                <li>Adobe AfterEffect</li>
-                <li>Magix Video Deluxe</li>
-            </ul>
-            <h3>Photographie</h3>
-            <ul>
-                <li>Nikon D3300</li>
-                <li>Samsung Galaxy A71 128GB</li>
-            </ul>
+
+
             <h2>Formations</h2>
             <ul>
+                <li> 2020-2021- Formation de Community Manager - FormationÀDistance.be
+                </li>
                 <li> 2019- Formation en développement Web- BeCode- Charleroi
                 </li>
                 <li>2017-2019 -Infographie - HEAJ- Namur
