Amélioration du header

--- a/porte-folio.html
+++ b/porte-folio.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="index.html#apps">Applications</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html#parcours">Parcours</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Acceuil</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -40,10 +43,11 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="https://github.com/DzenetanMassart?tab=repositories">Github</a>
                             <a class="dropdown-item" href="https://www.linkedin.com/in/dzenetan-massart/">Linkedin</a>
-                            <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
-                            <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.youtube.com/channel/UCpZE_eV7wKf7sJXvpPGP-ZA/videos">YouTube</a>
                             <a class="dropdown-item" href="https://www.behance.net/dznetanmassart">Behance</a>
-                            <a class="dropdown-item" href="https://www.scoop.it/topic/les-applications-en-ligne">ScoopIt</a>
+                            <a class="dropdown-item" href="https://sketchfab.com/DzenetanMassart/models">Sketchfab</a>
+                            <a class="dropdown-item" href="https://www.codewars.com/users/DzenetanMassart">Codewars</a>
+                            <a class="dropdown-item" href="https://www.pinterest.fr/MakeOnWebsoft/_saved/">Pinterest</a>
 
                         </div>
                     </li>
