Amélioration du header et rectifications

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#apps">Applications</a>
+                        <a class="nav-link" href="index.html#apps">Applications</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#parcours">Parcours</a>
+                        <a class="nav-link" href="index.html#parcours">Parcours</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="porte-folio.html">Porte-Folio</a>
@@ -111,7 +111,7 @@
                     <a href="https://code.visualstudio.com/Download">Visual Studio Code</a>
                 </li>
                 <li>
-                    <a href="https://getbootstrap.com/docs/4.3/getting-started/download/">Bootstrap</a>
+                    <a href="https://www.w3schools.com/bootstrap4/bootstrap_get_started.asp">Bootstrap</a>
                 </li>
                 <li>
                     <a href="https://fontawesome.com/start">FontAwesome</a>
@@ -163,10 +163,10 @@
                     Design d'interface
                 </li>
                 <li>
-                    Photographie de groupe
+                    Photographie de groupe ( avec appareil photo numérique)
                 </li>
                 <li>
-                    Dynamisation de vidéo
+                    Dynamisation de vidéo ( montage fast-cut )
                 </li>
                 <li>
                     Mise en place d'un design fantaisiste (HTML-CSS-JS)
@@ -184,10 +184,10 @@
                     Création de gif animé
                 </li>
                 <li>
-                    Création de tutoriel
+                    Création de tutoriel (en voix off)
                 </li>
                 <li>
-                    Community Managing
+                    Animation de communauté sur les réseaux sociaux ( Community Managing )
                 </li>
             </ul>
             <ul class="programmes">
@@ -242,7 +242,7 @@
         </div>
     </section>
     <!--La div ayant le parcours FIN-->
-    <div class="copyright">© Dzénetan Massart - 2021</div>
+    <div class="copyright">Copyright © 2017-2021 Dzénetan Massart</div>
 
 
     <!--Les scripts-->
