Amélioration des listes

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     Storyboarding
                 </li>
                 <li>
-                    Design d'un CV (PDF et HTML)
+                    Design d'un CV <sup> ( PDF et HTML ) </sup>
                 </li>
                 <li>
                     Narration
@@ -163,16 +163,16 @@
                     Design d'interface
                 </li>
                 <li>
-                    Photographie de groupe ( avec appareil photo numérique)
+                    Photographie de groupe <sup> ( avec appareil photo numérique )</sup>
                 </li>
                 <li>
-                    Dynamisation de vidéo ( montage fast-cut )
+                    Dynamisation de vidéo <sup>( montage fast-cut )</sup>
                 </li>
                 <li>
-                    Mise en place d'un design fantaisiste (HTML-CSS-JS)
+                    Mise en place d'un design fantaisiste <sup>( HTML-CSS-JS )</sup>
                 </li>
                 <li>
-                    Aide à la mise en place d'un projet créatif (Moodboard + organisation)
+                    Aide à la mise en place d'un projet créatif <sup>( Moodboard + organisation )</sup>
                 </li>
                 <li>
                     Création de logo unicolor
@@ -184,10 +184,10 @@
                     Création de gif animé
                 </li>
                 <li>
-                    Création de tutoriel (en voix off)
+                    Création de tutoriel <sup>( en voix off )</sup>
                 </li>
                 <li>
-                    Animation de communauté sur les réseaux sociaux ( Community Managing )
+                    Animation de communauté sur les réseaux sociaux <sup>( Community Managing )</sup>
                 </li>
             </ul>
             <ul class="programmes">
