--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
             <a class="cv" href="CV.html">CV</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-vector-square"></i>
-                        </button>
+                <i class="far fa-caret-square-down"></i>                        </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
