--- a/CV.html
+++ b/CV.html
@@ -13,11 +13,25 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/cv.css" media="screen">
     <link rel="stylesheet" type="text/css" href="assets/css/cv_print.css" media="print">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="root/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="root/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="root/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="root/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="root/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="root/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="root/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="root/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="root/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="root/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="root/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="root/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="root/favicon-16x16.png">
 </head>
 
 <body>
     <header>
-        <div> <img src="assets/image/profil.jpeg" class="profil" />
+        <div> <img src="root/android-icon-192x192.png" class="profil" />
         </div>
         <div>
             <h1>MASSART DZÉNETAN</h1>
