--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--Le header DEBUT-->
     <header class="dark background">
         <nav class="navbar navbar-expand-lg ">
-            <img src="assets/image/profil.jpeg" id="profil" class="profil" />
+            <img src="root/android-icon-192x192.png" id="profil" class="profil" />
             <a class="cv" href="CV.html">CV</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,7 +99,7 @@
 
         <h1>Bienvenue sur le site de Dzénetan Massart !</h1>
         <div class="intro">
-            <p>Ce site a été créé pendant la formation "BeCode" et sert à tester les différentes capacités apprises lors de la formation par Dzénetan Massart.</p>
+            <p>Ce site a été créé pendant <a href="https://becode.org/fr/" title="Renseignez-vous">la formation "BeCode"</a> et sert à tester les différentes capacités apprises lors de la formation par Dzénetan Massart.</p>
             <p>Entre-temps, ce site a évolué pour vous mettre en avant bien plus que tout ce qui touche au code en énumérant les différentes capacités que Dzénetan Massart vous propose à mettre à contribution pour vos projets.</p>
         </div>
         <div class="inline">
@@ -143,50 +143,51 @@
                     JS
                 </li>
             </ul>
+
             <ul class="capacites">
                 <span> <i class="fas fa-briefcase"></i> Liste des capacités que je peux vous proposer</span>
 
-                <li>
+                <li title="J'utilise donc Adobe Premiere et Adobe After Effect">
                     Montage-vidéo
                 </li>
-                <li>
+                <li title="J'utilise donc du papier et PaintDotNet/Adobe Photoshop">
                     Storyboarding
                 </li>
-                <li>
-                    Design d'un CV <sup> ( PDF et HTML ) </sup>
+                <li title="J'utilise donc Adobe InDesign et Visual Studio Code">
+                    Design d'un CV <sup> (PDF et HTML) </sup>
                 </li>
-                <li>
+                <li title="J'utilise donc Audacity">
                     Narration
                 </li>
-                <li>
+                <li title="J'utilise donc Adobe InDesign, PaintDotNet et Photoshop">
                     Design d'interface
                 </li>
-                <li>
-                    Photographie de groupe <sup> ( avec appareil photo numérique )</sup>
+                <li title="J'utilise donc mon appareil photo et PaintDotNet/Photoshop pour améliorer les rendus">
+                    Photographie de groupe <sup> (avec appareil photo numérique)</sup>
                 </li>
-                <li>
-                    Dynamisation de vidéo <sup>( montage fast-cut )</sup>
+                <li title="J'utilise donc Adobe Premiere">
+                    Dynamisation de vidéo <sup>(montage fast-cut)</sup>
                 </li>
-                <li>
-                    Mise en place d'un design fantaisiste <sup>( HTML-CSS-JS )</sup>
+                <li title="J'utilise donc Visual Studio Code">
+                    Mise en place d'un design fantaisiste <sup>(HTML-CSS-JS)</sup>
                 </li>
-                <li>
-                    Aide à la mise en place d'un projet créatif <sup>( Moodboard + organisation )</sup>
+                <li title="J'utilise donc ABSOLUMENT TOUT">
+                    Aide à la mise en place d'un projet créatif <sup>(Moodboard + organisation)</sup>
                 </li>
-                <li>
+                <li title="J'utilise donc Adobe Illustrator et du papier">
                     Création de logo unicolor
                 </li>
-                <li>
+                <li title="J'utilise donc Adobe Premiere">
                     Dé-rusher video
                 </li>
-                <li>
+                <li title="J'utilise donc Adobe After Effect et Adobe Photoshop">
                     Création de gif animé
                 </li>
-                <li>
-                    Création de tutoriel <sup>( en voix off )</sup>
+                <li title="J'utilise donc Audacity, OBS Studio et Adobe Premiere">
+                    Création de tutoriel <sup>(en voix off)</sup>
                 </li>
-                <li>
-                    Animation de communauté sur les réseaux sociaux <sup>( Community Managing )</sup>
+                <li title="J'utilise donc ABSOLUMENT TOUT">
+                    Animation de communauté sur les réseaux sociaux <sup>(Community Managing)</sup>
                 </li>
             </ul>
             <ul class="programmes">
@@ -211,7 +212,7 @@
                     Adobe After Effect CS6 <sup>(amélioré avec des plugins)</sup>
                 </li>
                 <li>
-                    Adobe Illustrator
+                    Adobe Illustrator CS6
                 </li>
                 <li>
                     OBS Studio
@@ -227,7 +228,7 @@
     <!--La div ayant les applications DEBUT-->
     <section class="apps">
         <h2 id="apps">Les Applications</h2>
-        <p class="description">Ici se trouve les applications que j'ai créées sur mon Github !</p>
+        <p class="description">Ici se trouve les applications que j'ai créées sur <a class="lien_magique" href="https://github.com/DzenetanMassart?tab=repositories" title="Allons-y !">mon Github  </a>!</p>
         <div class="appsview" id="generate"></div>
     </section>
     <!--La div ayant les applications FIN-->
@@ -235,11 +236,12 @@
     <!--La div ayant le parcours DEBUT-->
     <section class="parcours">
         <h2 id="parcours">Le Parcours</h2>
-        <p class="description">Ici se trouve mon parcours d'apprentissage de mes différentes compétences !</p>
+        <p class="description">Ici se trouve mon parcours d'apprentissage des logiciels !</p>
         <div class="parc" id="parc">
 
         </div>
     </section>
+
     <!--La div ayant le parcours FIN-->
     <div class="copyright">Copyright © 2017-2021 Dzénetan Massart</div>
 
